Fixed sonarqube issues